2000-05-24  TNT Development  <tntdevel@brokendreams.net>

	* tnt.el (tnt-show-buddy-signonoff): added.
	(tnt-set-buddy-status): checks for tnt-show-buddy-signoff, determines
	whether or not signon/off messages are displayed in the minibuffer.

2000-05-22  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-pop-event): now gives message if called when there
	are no events to respond to.

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-login-flag-unset-after): added.
	(tnt-login-flag): added.
	(tnt-set-buddy-status): now checks the login flag.  for the first
	three seconds we're logged in, changes in buddy status are not
	reported to the user, since mostly they're not really "changes".
	(tnt-unset-login-flag): added.  called by the timer.  unsets the
	login flag.
	(tnt-handle-sign-on): now sets the login flag, and creates a timer
	to call the unset function.

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-set-buddy-status): moved the call to
	set-just-signedonoff to within the check to see whether status
	just changed.  this fixes the bug where before it would say
	someone just signed on who in fact just set "away" or just became
	idle or whatever.

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-im-buddy): now checks whether user is online.
	(tnt-set-buddy-status): now checking tnt-timers-available before
	setting a user as "just signed on/off".

2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-just-signedonoff-alist): added.
	(tnt-just-signedonoff-delay): added.
	(tnt-build-buddy-buffer): replaced big quoted lambda with quoted
	function tnt-buddy-list-filter.
	(tnt-buddy-list-filter): added.  
	(tnt-buddy-list-filter): now displays just-onoff, indicating
	whether a buddy just signed on or off.  this also means that a
	buddy can be displayed even if they're not online, which didn't
	used to be the case.